--- a/software.html
+++ b/software.html
@@ -39,8 +39,28 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698424558-senior-software-engineer-with-saas-products-java-javascript-aws-agile-scrum-environment-'>Bey Senior Software Engineer with SaaS products, Java, JavaScript, AWS, agile/scrum environment. | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.lever.co/percona/1ef416f6-f23d-4e6e-8057-48e8d6020c9a'>Percona - Backend Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/percona/8dde575c-be09-4d78-a70c-239787ded810'>Percona - Backend Software Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/percona/974c7ee6-33db-4760-9d75-3f897e4a4ce2'>Percona - C/C++ Software Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://idana.join.com/jobs/464256-fullstack-software-engineer-typescript-m-f-d'>Job @ Tomes (Remote): Fullstack Software Engineer ... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://idana.join.com/jobs/467440-fullstack-software-engineer-typescript-m-f-d'>Job @ Tomes (Remote): Fullstack Software Engineer ... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698424558-senior-software-engineer-with-saas-products-java-javascript-aws-agile-scrum-environment-'>Bey Senior Software Engineer with SaaS products, Java, JavaScript, AWS, agile/scrum environment. | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Santa Clara, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://www.stoutsystems.com/job/2900-SM/'>Software Developer - Qt</a></h5> 
@@ -119,7 +139,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698409676-junior-software-developer'>LaunchCode Junior Software Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698409676-junior-software-developer'>LaunchCode Junior Software Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -183,7 +203,7 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/globalsign/jobs/senior-software-engineer-bgidOM-L0r6BGMaKjNoogA'>Senior Software Engineer #0254 job at GlobalSign in London, United Kingdom, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/globalsign/jobs/senior-software-engineer-bgidOM-L0r6BGMaKjNoogA'>Senior Software Engineer #0254 job at GlobalSign in London, United Kingdom, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom London, United Kingdom</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -223,7 +243,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/coupang/jobs/1914739'>Job Application for Senior Software Engineer_Marketing Platform at Coupang</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang/jobs/1914739'>Job Application for Senior Software Engineer_Marketing Platform at Coupang</a></h5> 
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -235,7 +255,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999698365556-ios-software-engineer'>Netatmo iOS Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999698365556-ios-software-engineer'>Netatmo iOS Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -281,7 +301,7 @@
 <p><span class="badge badge-light">Jakarta, Indonesia Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/incontact/job/oLbpbfwg'>NICE inContact Careers - Principal Software Engineer (Omni)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/incontact/job/oLbpbfwg'>NICE inContact Careers - Principal Software Engineer (Omni)</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, Utah  Salt Lake City, UT</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -317,7 +337,7 @@
 <p><span class="badge badge-light">Raleigh , North Carolina</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/twitch/jobs/4491130002'>Job Application for Software Engineer at Twitch</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twitch/jobs/4491130002'>Job Application for Software Engineer at Twitch</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, UT</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -341,7 +361,7 @@
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=oPN89fwD&__jvst=Employee+Referral&__jvsd=snfTCgwS&__jvsc=Twitter&bid=nYiXmMwQ'>Palo Alto Networks Careers - Senior Cloud Software Engineer (Cloud Security Infrastructure)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=oPN89fwD&__jvst=Employee+Referral&__jvsd=snfTCgwS&__jvsc=Twitter&bid=nYiXmMwQ'>Palo Alto Networks Careers - Senior Cloud Software Engineer (Cloud Security Infrastructure)</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -361,7 +381,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Tradeshift/743999698350225-backend-software-engineer-apps-team'>Tradeshift Backend Software Engineer - Apps Team | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Tradeshift/743999698350225-backend-software-engineer-apps-team'>Tradeshift Backend Software Engineer - Apps Team | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -369,11 +389,11 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bjss/jobs/1931346'>Job Application for Software Engineer  at BJSS</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bjss/jobs/1931346'>Job Application for Software Engineer  at BJSS</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oRN7afwF&__jvst=Employee+Referral&__jvsd=sXKg3hwM&__jvsc=Twitter&bid=nFnWmMwB'>NICE Actimize Careers - Expert Software Developer - AWS</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oRN7afwF&__jvst=Employee+Referral&__jvsd=sXKg3hwM&__jvsc=Twitter&bid=nFnWmMwB'>NICE Actimize Careers - Expert Software Developer - AWS</a></h5> 
 <p><span class="badge badge-light">Raanana, Israel</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -409,7 +429,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='http://nearearthautonomy.applytojob.com/apply/IPIHoOxzn6/C-Software-Engineer'>C++ Software Engineer - Near Earth Autonomy - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://nearearthautonomy.applytojob.com/apply/IPIHoOxzn6/C-Software-Engineer'>C++ Software Engineer - Near Earth Autonomy - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -417,28 +437,8 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698344147-senior-net-software-engineer-joining-bonus-'>KMS Technology SENIOR .NET SOFTWARE ENGINEER (Joining Bonus) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698344147-senior-net-software-engineer-joining-bonus-'>KMS Technology SENIOR .NET SOFTWARE ENGINEER (Joining Bonus) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698343930-senior-net-application-software-engineer-joining-bonus-'>KMS Technology SENIOR .NET APPLICATION SOFTWARE ENGINEER (Joining Bonus) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Ho Chi Minh Vietnam</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/fgCzyN96hj/Senior-Software-Engineer'>Senior Software Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
-<p><span class="badge badge-light">San Francisco, CA</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/aJ6922LvyL/Software-Engineer-Machine-Learning'>Software Engineer - Machine Learning - IntelliPro Group Inc. - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/d2pkd7SUGO/Software-DeveloperJavaPythonNetwork'>Software Developer(Java/Python+Network) - IntelliPro Group Inc. - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/C8vCWtLAPt/Product-Analytics-Developer-Software-Engineer-'>Product Analytics Developer (Software Engineer ) - IntelliPro Group Inc. - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 
